# skand-otel-utils-python

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
skand_otel_utils/: propagator.py
skand_otel_utils/cloudevents/: types.py
skand_otel_utils/cloudevents/decorators/: distributed_trace_context.py  setup_distributed_trace_context.py  trace_span.py
tests/: pyproject.toml  test_propagator.py  testutils.py
tests/cloudevents/decorators/: test_distributed_trace_context.py  test_setup_distributed_trace_context.py  test_trace_span.py
